# epsa-captcha-bot

./: .env  .flake8  README.md  pyproject.toml
.github/workflows/: deploy-production.yml  tests.yml
app/: bot.py  bot_setup.py  settings.py
app/captcha/: anti_captcha_provider.py  game_specific.py  image_with_numbers.py  resolvers.py  simple_emoji.py  simple_grammar.py  simple_math.py
app/repo/: __init__.py  captcha_cache.py  connection.py
etc/: supervisor-example.conf
tests/bot/: test_captcha.py
tests/captcha/: test_convert_number_words.py  test_game_specific.py  test_image_with_numbers.py  test_replace_eng_chars.py  test_simple_emoji.py  test_simple_grammar.py  test_simple_math.py  test_try_resolve.py
tests/captcha/anti_captcha/: conftest.py  test_client_contracts.py  test_resolve_image_to_number.py
