[tool.poetry]
name = "epsa-captcha-bot"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^2.2.1"}
pydantic-settings = "^2.0.3"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
wemake-python-styleguide = "^0.18.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"


[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.isort]
line_length = 125
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
